--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,358 +1,583 @@
-body {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
 
-.menu-bar {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-    padding: 30px;
-    width: 100%;
-    max-width: 1000px;
-}
+@media screen and (min-width: 768px) {
+    body {
+        margin: 0;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
 
-.menu-logo {
-    width: 100px;
-}
+    .menu-bar {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: center;
+        padding: 30px;
+        width: 100%;
+        max-width: 1000px;
+    }
 
-.hero-section {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    width: 100%;
-    max-width: 1000px;
-    height: 800px;
-}
-
-.hero-section-title {
-    font-size: 60px;
-    font-weight: 800;
-}
-
-.hero-section-subtitle {
-    font-size: 30px;
-}
-
-.hero-section-button {
-    background-color: brown;
-    color: white;
-    width: 200px;
-    font-size: 30px;
-    padding: 10px;
-    border-style: none;
-    border-radius: 16px;
-}
-
-.hero-image {
-    width: 500px;
-}
-
-.about-section-background {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: brown;
-    width: 100%;
-}
-
-.about-section {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    background-color: brown;
-    width: 100%;
-    max-width: 1200px;
-    height: 800px;
-}
-
-.about-section-right {
-    width: 600px;
-    padding: 30px;
-}
-
-.about-title {
-    font-size: 40px;
-    font-weight: 800;
-    color: white;
-}
-
-.about-text {
-    font-size: 20px;
-    color: white;
-}
-
-.about-section-image {
-    width: 500px;
-}
-
-.about-learn-more {
-    width: 200px;
-    font-size: 20px;
-    background-color: black;
-    color: white;
-    padding: 10px;
-    border-radius: 16px;
-    border-style: none;
-}
-
-.what-we-offer-section-background {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: lightgray;
-    width: 100%;
-}
-
-.what-we-offer-section {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: lightgray;
-    height: 800px;
-    width: 100%;
-    max-width: 1000px;
-}
-
-.what-we-offer-title {
-    font-size: 40px;
-    font-weight: 800;
-}
-
-.what-we-offer-text {
-    font-size: 20px;
-    color: grey;
-    text-align: center;
-}
-
-.what-we-offer-box-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    padding-bottom: 80px;
-}
-
-.what-we-offer-box {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: white;
-    border-radius: 16px;
-    width: 300px;
-}
-
-.what-we-offer-box-image {
-    width: 200px;
-}
-
-.what-we-offer-menu-button {
-    width: 200px;
-    padding: 10px;
-    border-style: none;
-    border-radius: 16px;
-    background-color: brown;
-    color: white;
-    font-size: 20px;
-}
-
-.clients-say-section-background {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: brown;
-    width: 100%;
-}
-
-.clients-say-section {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: brown;
-    width: 100%;
-    max-width: 1000px;
-    height: 800px;
-}
-
-.clients-say-title {
-    font-size: 40px;
-    font-weight: 800;
-    color: white;
-}
-
-.clients-say-box-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-}
-
-.clients-say-box {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    width: 250px;
-    padding: 30px;
-}
-
-.clients-say-box-name {
-    font-size: 30px;
-    font-weight: 800;
-}
-
-.restaurant-information-section-background {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: black;
-    width: 100%;
-}
-
-.restaurant-information-section {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    background-color: black;
-    width: 100%;
-    max-width: 1000px;
-    padding-bottom: 80px;
-}
-
-.restaurant-information-section-container {
-    width: 100%;
-    height: 100%;
-    padding-left: 80px;
-    padding-top: 80px;
-}
-
-.restaurant-information-section-title {
-    color: white;
-    font-size: 30px;
-    font-weight: 800;
-}
-
-.restaurant-information-section-text {
-    color: white;
-    font-size: 16px;
-}
-
-.restaurant-information-section-image {
-    width: 500px;
-}
-
-.restaurant-information-section-email {
-    font-size: 20px;
-    color: white;
-}
-
-/* Mobile Responsiveness */
-@media screen and (max-width: 768px) {
+    .menu-logo {
+        width: 100px;
+    }
 
     .hero-section {
-        flex-direction: column;
-        height: 1000px;
-        text-align: center;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+        width: 100%;
+        max-width: 1000px;
+        height: 800px;
+    }
+
+    .hero-section-title {
+        font-size: 60px;
+        font-weight: 800;
+    }
+
+    .hero-section-subtitle {
+        font-size: 30px;
+    }
+
+    .hero-section-button {
+        background-color: brown;
+        color: white;
+        width: 200px;
+        font-size: 30px;
+        padding: 10px;
+        border-style: none;
+        border-radius: 16px;
     }
 
     .hero-image {
-        width: 90%;
+        width: 500px;
     }
 
-    .hero-section-title
-    {
-        font-size: 40px;
+    .about-section-background {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: brown;
+        width: 100%;
     }
 
     .about-section {
-        text-align: center;
-        flex-wrap: wrap;
-
-        height: 1000px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        background-color: brown;
+        width: 100%;
+        max-width: 1200px;
+        height: 800px;
     }
 
     .about-section-right {
-        width: 90%;
+        width: 600px;
+        padding: 30px;
+    }
+
+    .about-title {
+        font-size: 40px;
+        font-weight: 800;
+        color: white;
+    }
+
+    .about-text {
+        font-size: 20px;
+        color: white;
     }
 
     .about-section-image {
-        width: 90%;
+        width: 500px;
     }
-    
 
+    .about-learn-more {
+        width: 200px;
+        font-size: 20px;
+        background-color: black;
+        color: white;
+        padding: 10px;
+        border-radius: 16px;
+        border-style: none;
+    }
 
+    .what-we-offer-section-background {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        background-color: lightgray;
+        width: 100%;
+    }
 
-    .what-we-offer-section
-    {
-        height: 1300px;        
+    .what-we-offer-section {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: lightgray;
+        height: 800px;
+        width: 100%;
+        max-width: 1000px;
+    }
+
+    .what-we-offer-title {
+        font-size: 40px;
+        font-weight: 800;
+    }
+
+    .what-we-offer-text {
+        font-size: 20px;
+        color: grey;
+        text-align: center;
     }
 
     .what-we-offer-box-container {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
         align-items: center;
-        flex-direction: column;
+        width: 100%;
+        padding-bottom: 80px;
+    }
 
+    .what-we-offer-box {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: white;
+        border-radius: 16px;
+        width: 300px;
+    }
+
+    .what-we-offer-box-image {
+        width: 200px;
+    }
+
+    .what-we-offer-menu-button {
+        width: 200px;
+        padding: 10px;
+        border-style: none;
+        border-radius: 16px;
+        background-color: brown;
+        color: white;
+        font-size: 20px;
+    }
+
+    .clients-say-section-background {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: brown;
+        width: 100%;
+    }
+
+    .clients-say-section {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: brown;
+        width: 100%;
+        max-width: 1000px;
+        height: 800px;
+    }
+
+    .clients-say-title {
+        font-size: 40px;
+        font-weight: 800;
+        color: white;
+    }
+
+    .clients-say-box-container {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+
+    .clients-say-box {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        color: white;
+        width: 250px;
+        padding: 30px;
+    }
+
+    .clients-say-box-name {
+        font-size: 30px;
+        font-weight: 800;
+    }
+
+    .restaurant-information-section-background {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: black;
+        width: 100%;
+    }
+
+    .restaurant-information-section {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        background-color: black;
+        width: 100%;
+        max-width: 1000px;
+        padding-bottom: 80px;
+    }
+
+    .restaurant-information-section-container {
+        width: 100%;
+        height: 100%;
+        padding-left: 80px;
+        padding-top: 80px;
+    }
+
+    .restaurant-information-section-title {
+        color: white;
+        font-size: 30px;
+        font-weight: 800;
+    }
+
+    .restaurant-information-section-text {
+        color: white;
+        font-size: 16px;
+    }
+
+    .restaurant-information-section-image {
+        width: 500px;
+    }
+
+    .restaurant-information-section-email {
+        font-size: 20px;
+        color: white;
+    }
+}
+
+
+/* Mobile Responsiveness */
+@media screen and (max-width: 768px) {
+    body {
+        margin: 0;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .menu-bar {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        padding-top: 40px;
+    }
+
+    .menu-logo {
+        width: 100px;
+    }
+
+
+
+    .hero-section {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 900px;
+    }
+
+    .hero-section-left
+    {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        padding-left: 30px;
+        padding-right: 30px;
+
+        padding-bottom: 40px;
+
+        text-align: center;
+    }
+
+    .hero-section-right
+    {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .hero-section-title {
+        font-size: 40px;
+        font-weight: 800;
+    }
+
+    .hero-section-subtitle {
+        font-size: 25px;
+    }
+
+    .hero-section-button {
+        background-color: brown;
+        color: white;
+        width: 200px;
+        font-size: 30px;
+        padding: 10px;
+        border-style: none;
+        border-radius: 16px;
+    }
+
+    .hero-image {
+        width: 80%;
+    }
+
+
+
+    .about-section-background {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: brown;
+        width: 100%;
+    }
+
+    .about-section {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: brown;
+        width: 100%;
+        height: 800px;
+    }
+
+    .about-section-left{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .about-section-right{
+        padding: 40px;
+    }
+
+    .about-title {
+        font-size: 25px;
+        font-weight: 800;
+        color: white;
+    }
+
+    .about-text {
+        font-size: 16px;
+        color: white;
+    }
+
+    .about-section-image {
+        width: 80%;
+    }
+
+    .about-learn-more {
+        width: 200px;
+        font-size: 20px;
+        background-color: black;
+        color: white;
+        padding: 10px;
+        border-radius: 16px;
+        border-style: none;
+    }
+
+
+
+    .what-we-offer-section-background {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        background-color: lightgray;
+        width: 100%;
+    }
+
+    .what-we-offer-section {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: lightgray;
+        height: 1200px;
+        width: 100%;
+    }
+
+    .what-we-offer-title {
+        font-size: 25px;
+        font-weight: 800;
+    }
+
+    .what-we-offer-text {
+        font-size: 16px;
+        color: grey;
+        text-align: center;
+    }
+
+    .what-we-offer-box-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
         padding-bottom: 40px;
     }
 
     .what-we-offer-box {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: white;
+        border-radius: 16px;
+        width: 300px;
+
         margin-bottom: 40px;
+    }
+
+    .what-we-offer-box-image {
         width: 200px;
     }
 
-    .what-we-offer-box-image
-    {
-        width: 150px;
+    .what-we-offer-menu-button {
+        width: 200px;
+        padding: 10px;
+        border-style: none;
+        border-radius: 16px;
+        background-color: brown;
+        color: white;
+        font-size: 20px;
     }
-    
 
-    .clients-say-section
-    {
-        height: 1500px;
+
+
+
+
+    .clients-say-section-background {
+        display: flex;
         flex-direction: column;
-        align-items: center;
         justify-content: center;
+        align-items: center;
+        background-color: brown;
+        width: 100%;
     }
 
-    .clients-say-title
-    {
-        font-size: 25px;
-        text-align: center;
+    .clients-say-section {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: brown;
+        width: 100%;
+        height: 1200px;
     }
+
+    .clients-say-title {
+        font-size: 30px;
+        font-weight: 800;
+        color: white;
+    }
+
     .clients-say-box-container {
-        flex-wrap: wrap;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+    }
+
+    .clients-say-box {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        color: white;
+        width: 250px;
+        padding: 30px;
+    }
+
+    .clients-say-box-name {
+        font-size: 30px;
+        font-weight: 800;
+    }
+
+
+
+
+
+    .restaurant-information-section-background {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: black;
     }
 
     .restaurant-information-section {
-        flex-direction: column;
-        text-align: center;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        background-color: black;
+        width: 100%;
 
-        height: 1200px;
-        padding-bottom: 0px;
-
+        padding-bottom: 40px;
     }
 
     .restaurant-information-section-container {
-        padding: 20px;
+        width: 100%;
+        height: 100%;
+        padding-left: 30px;
+        padding-top: 80px;
+    }
+
+    .restaurant-information-section-title {
+        color: white;
+        font-size: 30px;
+        font-weight: 800;
+    }
+
+    .restaurant-information-section-text {
+        color: white;
+        font-size: 16px;
     }
 
     .restaurant-information-section-image {
         width: 90%;
+    }
+
+    .restaurant-information-section-image-container {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .restaurant-information-section-email {
+        font-size: 20px;
+        color: white;
     }
 }
