--- a/styles/styles.css
+++ b/styles/styles.css
@@ -73,6 +73,31 @@ button:hover {
     opacity: 1;
 }
 
+
+.footer-section
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+
+    background-color: black;
+    color: white;
+    width: 100%;
+
+    padding-bottom: 30px;
+}
+
+.footer-section a
+{
+    color: white;
+    text-decoration: none;
+}
+
+.footer-section a:visited {
+    color: white;
+}
+
 @media screen and (min-width: 768px) {
     body {
         margin: 0;
